--- a/src/main/res/values-tr/strings.xml
+++ b/src/main/res/values-tr/strings.xml
@@ -24,7 +24,7 @@
     <!--Install Fragment-->
     <string name="advanced_settings_title">Gelişmiş Ayarlar</string>
     <string name="keep_force_encryption">Şifrelemeyi zorlamayı sürdür</string>
-    <string name="keep_dm_verity">AVB 2.0/dm-verity \'yi koru</string>
+    <string name="keep_dm_verity">AVB 2.0/dm-verity\'yi koru</string>
     <string name="current_magisk_title">Yüklü Sürüm: %1$s</string>
     <string name="install_magisk_title">Yeni Sürüm: %1$s</string>
     <string name="uninstall">Kaldır</string>
@@ -49,7 +49,7 @@
     <string name="update_available">Güncelleme Mevcut</string>
     <string name="installed">Yüklenmiş</string>
     <string name="not_installed">Yüklenmemiş</string>
-    <string name="updated_on">Updated on: %1$s</string>
+    <string name="updated_on">Güncelleme: %1$s</string>
     <string name="sorting_order">Sıralama Düzeni</string>
     <string name="sort_by_name">İsme göre sırala</string>
     <string name="sort_by_update">Son güncellemeye göre sırala</string>
