--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -45,12 +45,19 @@
     <string name="disable_file_created">Módulo será desativado na próxima reinicialização</string>
     <string name="disable_file_removed">Módulo será ativado na próxima reinicialização</string>
     <string name="author">Criado por %1$s</string>
+	<string name="reboot_recovery">Reiniciar no Recovery</string>
+    <string name="reboot_bootloader">Reiniciar no Bootloader</string>
+    <string name="reboot_download">Reiniciar no Download</string>
 
     <!--Repo Fragment-->
     <string name="update_available">Atualização disponível</string>
     <string name="installed">Instalado</string>
     <string name="not_installed">Não Instalado</string>
-
+	<string name="updated_on">Atualizado em: %1$s</string>
+    <string name="sorting_order">Ordem de classificação</string>
+    <string name="sort_by_name">Classificar por nome</string>
+    <string name="sort_by_update">Classificar por última atualização</string>
+	
     <!--Log Fragment-->
     <string name="menuSaveLog">Salvar registro</string>
     <string name="menuReload">Recarregar</string>
@@ -94,23 +101,29 @@
 	<string name="zip_process_msg">Processando arquivo zip …</string>
     <string name="manager_update_title">Nova atualização do Magisk Manager disponível!</string>
     <string name="manager_download_install">Pressione para baixar e instalar</string>
+	<string name="dtbo_patched_title">Patch no DTBO instalado!</string>
+    <string name="dtbo_patched_reboot">Magisk Manager instalou um patch no dtbo.img, por favor reinicie</string>
     <string name="magisk_updates">Atualizações do Magisk</string>
     <string name="flashing">Flasheando</string>
     <string name="hide_manager_toast">Ocultando Magisk Manager…</string>
+	<string name="hide_manager_toast2">Isso pode demorar um pouco…</string>
     <string name="hide_manager_fail_toast">Falha ao ocultar o Magisk Manager…</string>
     <string name="download_zip_only">Baixar somente o zip</string>
-    <string name="patch_boot_file">Arquivo Patch Boot Image</string>
+    <string name="patch_boot_file">Patchear um arquivo Boot Image</string>
     <string name="direct_install">Instalação Direta (Recomendado)</string>
     <string name="install_second_slot">Instalação no segundo Slot (Depois do OTA)</string>
     <string name="select_method">Selecionar Método</string>
     <string name="no_boot_file_patch_support">Versão do Magisk escolhida não suporta arquivo de patch boot image</string>
     <string name="boot_file_patch_msg">Selecione a stock boot image despejada(dump) no formato .img ou img.tar</string>
     <string name="complete_uninstall">Desinstalação Completa</string>
+	<string name="restore_img">Restaurar Images</string>
+    <string name="uninstall_app">Desinstalar App</string>
     <string name="restore_done">Restauração Completa!</string>
     <string name="restore_fail">backup da Stock não existe!</string>
     <string name="uninstall_toast">Desinstalando o Magisk Manager em 5 segundos, por favor reinicie manualmente depois</string>
     <string name="proprietary_title">Baixar Código do Proprietário</string>
     <string name="proprietary_notice">Magisk Manager é FOSS então não contém o código proprietário da API SafetyNet do Google.\n\nVocê permite que o Magisk Manager baixe uma extensão (contém o GoogleApiClient) para verificações SafetyNet?</string>
+	<string name="su_db_corrupt">O Banco de dados do SU está corrompido, criará novo db</string>
 	
     <!--Settings Fragment -->
     <string name="settings_general_category">Geral</string>
@@ -121,15 +134,17 @@
     <string name="settings_clear_cache_title">Limpar Repo Cache</string>
     <string name="settings_clear_cache_summary">Limpe as informações armazenadas em cache para repos. online, forçando o aplicativo a atualizar online</string>
 	<string name="settings_hide_manager_title">Ocultar Magisk Manager</string>
+	<string name="settings_hide_manager_summary">Criar um Magisk Manager com o nome do pacote aleatório</string>
     <string name="language">Linguagem</string>
     <string name="system_default">(Padrão do Sistema)</string>
     <string name="settings_update">Atualizar Configurações</string>
     <string name="settings_update_channel_title">Canal de atualizações</string>
     <string name="settings_update_stable">Estável</string>
     <string name="settings_update_beta">Beta</string>
-    <string name="settings_boot_format_title">Formato de Saida do Boot Patcheado</string>
-    <string name="settings_boot_format_summary">Selecione o formato de saida do Boot Image Patcheado.\nSelecione .img para flashear através do fastboot/modo de download; Selecione .img.tar para flashear com o ODIN.</string>
-	
+	<string name="settings_update_custom">personalizado</string>
+	<string name="settings_update_custom_msg">Insira um URL personalizado</string>
+    <string name="settings_boot_format_title">Formato de Saida do Boot com patch instalado</string>
+    <string name="settings_boot_format_summary">Selecione o formato de saida do Boot Image com patch instalado.\nSelecione .img para flashear através do fastboot/modo de download; Selecione .img.tar para flashear com o ODIN.</string>
 	<string name="settings_core_only_title">Magisk modo somente Core</string>
     <string name="settings_core_only_summary">Ativar somente recursos principais, todos os módulos não serão carregados. MagiskSU, MagiskHide, e systemless hosts ainda estará ativado</string>
     <string name="settings_magiskhide_summary">Ocultar Magisk de várias detecções</string>
@@ -151,6 +166,8 @@
     <string name="request_timeout_summary">%1$s segundos</string>
 	<string name="settings_su_reauth_title">Re-autenticar após a atualização</string>
     <string name="settings_su_reauth_summary">Re-autenticar permissões de superusuário após as atualizações de um aplicativo</string>
+	<string name="settings_su_fingerprint_title">Ativar autenticação de impressão digital</string>
+    <string name="settings_su_fingerprint_summary">Use o scanner de impressão digital para permitir solicitações de superusuário</string>
 	
 	<string name="multiuser_mode">Modo Multiusuário</string>
     <string name="settings_owner_only">Apenas Proprietário do Dispositivo</string>
@@ -168,7 +185,8 @@
     <string name="global_summary">Todas as sessões raiz usam o namespace de montagem global</string>
     <string name="requester_summary">As sessões de raiz herdarão o namespace do seu solicitante</string>
     <string name="isolate_summary">Cada sessão raiz terá seu próprio namespace isolado</string>
-
+	<string name="android_o_not_support">Não suporta Android 8.0+</string>
+	
     <!--Superuser-->
 	<string name="su_request_title">Solicitação de superusuário</string>
     <string name="deny_with_str">Negar%1$s</string>
@@ -196,7 +214,8 @@
     <string name="su_revoke_msg">Revogar os diretos do %1$s, Confirmar?</string>
     <string name="toast">Notificação(Toast)</string>
     <string name="none">Nenhum</string>
-
+	<string name="auth_fail">Falha na autenticação</string>
+	
     <!--Superuser logs-->
     <string name="pid">PID:\u0020</string>
     <string name="target_uid">Alvo UID:\u0020</string>
