--- a/src/main/res/values-lt/strings.xml
+++ b/src/main/res/values-lt/strings.xml
@@ -62,7 +62,7 @@
     <!--About Activity-->
     <string name="about">Apie</string>
     <string name="app_changelog">Pakeitimų sąrašas</string>
-    <string name="translators" />Vv2233Bb
+    <string name="translators">Vv2233Bb</string>
     <string name="app_version">Versija</string>
     <string name="app_source_code">Prisidėkite</string>
     <string name="donation">Auka</string>
