Italian - Add option to restore Magisk Manager
- Updated Italian translation with new two strings from 5.6.0

--- a/src/main/res/values-it/strings.xml
+++ b/src/main/res/values-it/strings.xml
@@ -132,6 +132,8 @@
 	<string name="settings_clear_cache_summary">Svuota la cache delle repository e forza l\'aggiornamento online dell\'app</string>
 	<string name="settings_hide_manager_title">Nascondi Magisk Manager</string>
 	<string name="settings_hide_manager_summary">Reinstalla Magisk Manager con un nome pacchetto casuale</string>
+	<string name="settings_restore_manager_title">Ripristina Magisk Manager</string>
+	<string name="settings_restore_manager_summary">Ripristina Magisk Manager con il nome pacchetto originale</string>
 	<string name="language">Lingua</string>
 	<string name="system_default">(Sistema)</string>
 	<string name="settings_update">Impostazioni aggiornamento</string>
