--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -162,6 +162,9 @@
     <string name="request_timeout_summary">%1$s секунд</string>
     <string name="settings_su_reauth_title">Повторная аутентификация</string>
     <string name="settings_su_reauth_summary">Повторный запрос прав Суперпользователя после обновления приложения</string>
+    <string name="settings_su_fingerprint_title">Аутентификация по отпечатку пальца</string>
+    <string name="settings_su_fingerprint_summary">Использовать сканнер отпечатков пальцев для аунтификации</string>
+
 
     <string name="multiuser_mode">Многопользовательский режим</string>
     <string name="settings_owner_only">Только владелец</string>
